--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <!-- section tentang -->
     <div class="break-section-lg"></div>
+    <p>abcdesrfghj</p>
     <!-- section tentang -->
 
 
