--- a/index.html
+++ b/index.html
@@ -65,27 +65,177 @@
 
 
     <!-- section tentang -->
-    <div class="break-section-lg"></div>
-    <p>abcdesrfghj</p>
+    <div class="break-section-lg" style="background-color: #F0F7FF;">
+        <div class="container">
+            <div class="row">
+              <div class="col-md-6 align-self-center mb-5">
+                <img class="img-fluid rounded-float-start" width="100%" src="assets/photo.png" alt="">
+              </div>
+              <div class="col-md-6 align-self-center mb-5">
+                <h1>Tentang Giss Tenda</h1>
+                <p class="text-end">Giss Tenda merupakan usaha dibidang penyewaan barang dan jasa untuk berbagai kegiatan seperti pesta pernikahan dan acara lainnya. Usaha tersebut berdiri sejak tahun 2016 berlokasi di Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas, pertama kali didirikan oleh Bapak Caryoko dan dikelola oleh Winda Apriliani selaku co-founder.</p>
+              </div>
+            </div>
+    </div>
     <!-- section tentang -->
 
 
     <!-- section service -->
-    <div class="break-section-lg"></div>
+    <div class="">
+        <div class="container-fluid" style="background-color: #FFFFFF">
+            <div class="row text-center">
+                <div class="col mb-3 mt-5">
+                    <h1>Our Service</h1>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col mb-1">
+                    <img class="img-fluid" width="230" height="264" src="assets/icon-rental.svg" alt="">
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col mb-5">
+                    <p>Sewa tenda indoor atau outdoor, sewa alat pesta, dan  jasa organ tunggal.</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- section service -->
 
 
     <!-- section produk -->
-    <div class="break-section-lg"></div>
-    <p>hsdhgdcbb</p>
+    <div class="break-section-lg">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col mb-5">
+                    <h1>Our Product</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 mb-5">
+                    <div class="card">
+                        <img src="assets/noto_circus-tent.svg" width="128" height="128" class="card-img-top" alt="Tenda">
+                        <div class="card-body text-center">
+                            <h3>Tenda</h3>
+                          <p class="card-text">Tenda sesuai ukuran yang anda inginkan, harga tergantung dengan berapa meter penggunaan.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4 mb-5">
+                    <div class="card">
+                        <img src="assets/bi_fan.svg" width="128" height="128" class="card-img-top" alt="Kipas">
+                        <div class="card-body text-center">
+                            <h3>Alat Pesta dan Blower</h3>
+                          <p class="card-text">Tersedia berbagai alat keperluan pesta dan blower untuk menyejukan suasan pesta anda.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 mb-5">
+                    <div class="card">
+                        <img src="assets/bxs_piano.svg" width="128" height="128" class="card-img-top" alt="Piano">
+                        <div class="card-body text-center">
+                            <h3>Organ Tunggal</h3>
+                          <p class="card-text">Acara anda butuh hiburan, kami menyediakan jasa organ tunggal lengkap dengan penyanyinya.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- section produk -->
 
     <!-- section mengapa -->
-    <div class="break-section-lg"></div>
+    <div class="break-section-lg">
+        <div class="container-fluid" style="background-color: #FFFFFF;" >
+            <div class="row text-center" style="background-color: #FFFFFF;">
+                <div class="col mb-5 mt-5">
+                    <h1>Mengapa memilih Giss Tent?</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3 mb-5">
+                    <div class="card border border-0">
+                        <img src="assets/ph_bag.svg" width="92.62" height="88.99" class="card-img-top" alt="Bag">
+                        <div class="card-body text-center">
+                            <h3>Professional</h3>
+                          <p class="card-text">Tenaga kerja yang professional dan
+                            terlatih, efektif dan efiisen dalam
+                            bekerja membangun tenda.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mb-5">
+                    <div class="card border border-0">
+                        <img src="assets/clock.svg" width="85" height="85" class="card-img-top" alt="Jam">
+                        <div class="card-body text-center">
+                            <h3>Berpengalaman</h3>
+                          <p class="card-text">Giss Tent telah berpengalaman
+                            selama 6 tahun dalam melayani
+                            berbagai event di daerah Banyumas
+                            dan sekitarnya.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mb-5">
+                    <div class="card border border-0">
+                        <img src="assets/material-symbols_thumb-up-outline-sharp.svg" width="89.25" height="85" class="card-img-top" alt="Jempol">
+                        <div class="card-body text-center">
+                            <h3>Berkualitas</h3>
+                          <p class="card-text">Kami selalu menyediakan kualitas
+                            bersih, dan kuat untuk memenuhi
+                            kebutuhan pelanggan.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 mb-5">
+                    <div class="card border border-0">
+                        <img src="assets/et_pricetags.svg" width="93.88" height="69.78" class="card-img-top" alt="Harga">
+                        <div class="card-body text-center">
+                            <h3>Harga Kompetitif</h3>
+                          <p class="card-text">Kami selalu memberikan harga
+                            sesuai dengan kualitas dan
+                            pelayanan yang 
+                            diberikan.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- section mengapa -->
 
     <!-- section galeri -->
-    <div class="break-section-lg"></div>
+    <div class="">
+        <div class="container-fluid" style="background-color: #FFFFFF;">
+            <div class="row text-center">
+                <div class="col mb-5 mt-5">
+                    <h1>Gallery</h1>
+                </div>
+            </div>
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col-lg-6 col-sm-4 mb-5">
+                    <img src="assets/galeri-1.png" width="519" height="390" alt="">
+                  </div>
+                  <div class="col-lg-6 col-sm-4">
+                    <img src="assets/galeri-2.png" width="508" height="390" alt="">
+                </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-sm-4 mb-5">
+                      <img src="assets/galeri-3.png" width="519" height="390" alt="">
+                    </div>
+                    <div class="col-lg-6 col-sm-4 mb-5">
+                      <img src="assets/galeri-4.png" width="508" height="390" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col mb-5">
+                    <button class="btn-lihat" style="background-color: #3583DE;">LIHAT LAINNYA</button>
+            </div>
+        </div>
+    </div>
     <!-- section galeri -->
 
     <!-- Footer -->
