benerin break section

--- a/index.html
+++ b/index.html
@@ -68,20 +68,21 @@
     <div class="break-section-lg" style="background-color: #F0F7FF;">
         <div class="container">
             <div class="row">
-              <div class="col-md-6 align-self-center mb-5">
+              <div class="col-md-6 align-self-center">
                 <img class="img-fluid rounded-float-start" width="100%" src="assets/photo.png" alt="">
               </div>
-              <div class="col-md-6 align-self-center mb-5">
+              <div class="col-md-6 align-self-center">
                 <h1>Tentang Giss Tenda</h1>
                 <p class="text-end">Giss Tenda merupakan usaha dibidang penyewaan barang dan jasa untuk berbagai kegiatan seperti pesta pernikahan dan acara lainnya. Usaha tersebut berdiri sejak tahun 2016 berlokasi di Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas, pertama kali didirikan oleh Bapak Caryoko dan dikelola oleh Winda Apriliani selaku co-founder.</p>
               </div>
             </div>
+            <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
     </div>
     <!-- section tentang -->
 
 
     <!-- section service -->
-    <div class="">
+    <div class="break-section-lg" style="background-color: #FFFFFF;">
         <div class="container-fluid" style="background-color: #FFFFFF">
             <div class="row text-center">
                 <div class="col mb-3 mt-5">
@@ -90,15 +91,16 @@
             </div>
             <div class="row text-center">
                 <div class="col mb-1">
-                    <img class="img-fluid" width="230" height="264" src="assets/icon-rental.svg" alt="">
+                    <img class="img-fluid" width="180" height="214" src="assets/icon-rental.svg" alt="">
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col mb-5">
+                <div class="col">
                     <p>Sewa tenda indoor atau outdoor, sewa alat pesta, dan  jasa organ tunggal.</p>
                 </div>
             </div>
         </div>
+        <div class="break-section-lg" style="background-color: #FFFFFF;"></div>
     </div>
     <!-- section service -->
 
@@ -111,10 +113,11 @@
                     <h1>Our Product</h1>
                 </div>
             </div>
+            <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
             <div class="row">
                 <div class="col-4 mb-5">
-                    <div class="card">
-                        <img src="assets/noto_circus-tent.svg" width="128" height="128" class="card-img-top" alt="Tenda">
+                    <div class="card border border-0" style="background-color: #F0F7FF;">
+                        <img src="assets/noto_circus-tent.svg" width="80" height="80" class="card-img-top" alt="Tenda">
                         <div class="card-body text-center">
                             <h3>Tenda</h3>
                           <p class="card-text">Tenda sesuai ukuran yang anda inginkan, harga tergantung dengan berapa meter penggunaan.</p>
@@ -122,8 +125,8 @@
                       </div>
                 </div>
                 <div class="col-4 mb-5">
-                    <div class="card">
-                        <img src="assets/bi_fan.svg" width="128" height="128" class="card-img-top" alt="Kipas">
+                    <div class="card border border-0" style="background-color: #F0F7FF;">
+                        <img src="assets/bi_fan.svg" width="80" height="80" class="card-img-top" alt="Kipas">
                         <div class="card-body text-center">
                             <h3>Alat Pesta dan Blower</h3>
                           <p class="card-text">Tersedia berbagai alat keperluan pesta dan blower untuk menyejukan suasan pesta anda.</p>
@@ -131,8 +134,8 @@
                     </div>
                 </div>
                 <div class="col-4 mb-5">
-                    <div class="card">
-                        <img src="assets/bxs_piano.svg" width="128" height="128" class="card-img-top" alt="Piano">
+                    <div class="card border border-0" style="background-color: #F0F7FF;">
+                        <img src="assets/bxs_piano.svg" width="80" height="80" class="card-img-top" alt="Piano">
                         <div class="card-body text-center">
                             <h3>Organ Tunggal</h3>
                           <p class="card-text">Acara anda butuh hiburan, kami menyediakan jasa organ tunggal lengkap dengan penyanyinya.</p>
@@ -152,10 +155,11 @@
                     <h1>Mengapa memilih Giss Tent?</h1>
                 </div>
             </div>
+            <div class="break-section-lg" style="background-color: #FFFFFF;"></div>
             <div class="row">
                 <div class="col-3 mb-5">
                     <div class="card border border-0">
-                        <img src="assets/ph_bag.svg" width="92.62" height="88.99" class="card-img-top" alt="Bag">
+                        <img src="assets/ph_bag.svg" width="70" height="70" class="card-img-top" alt="Bag">
                         <div class="card-body text-center">
                             <h3>Professional</h3>
                           <p class="card-text">Tenaga kerja yang professional dan
@@ -166,7 +170,7 @@
                 </div>
                 <div class="col-3 mb-5">
                     <div class="card border border-0">
-                        <img src="assets/clock.svg" width="85" height="85" class="card-img-top" alt="Jam">
+                        <img src="assets/clock.svg" width="70" height="70" class="card-img-top" alt="Jam">
                         <div class="card-body text-center">
                             <h3>Berpengalaman</h3>
                           <p class="card-text">Giss Tent telah berpengalaman
@@ -178,7 +182,7 @@
                 </div>
                 <div class="col-3 mb-5">
                     <div class="card border border-0">
-                        <img src="assets/material-symbols_thumb-up-outline-sharp.svg" width="89.25" height="85" class="card-img-top" alt="Jempol">
+                        <img src="assets/material-symbols_thumb-up-outline-sharp.svg" width="70" height="70" class="card-img-top" alt="Jempol">
                         <div class="card-body text-center">
                             <h3>Berkualitas</h3>
                           <p class="card-text">Kami selalu menyediakan kualitas
@@ -189,7 +193,7 @@
                 </div>
                 <div class="col-3 mb-5">
                     <div class="card border border-0">
-                        <img src="assets/et_pricetags.svg" width="93.88" height="69.78" class="card-img-top" alt="Harga">
+                        <img src="assets/et_pricetags.svg" width="69" height="69" class="card-img-top" alt="Harga">
                         <div class="card-body text-center">
                             <h3>Harga Kompetitif</h3>
                           <p class="card-text">Kami selalu memberikan harga
@@ -205,13 +209,14 @@
     <!-- section mengapa -->
 
     <!-- section galeri -->
-    <div class="">
+    <div class="break-section-lg" style="background-color: #FFFFFF;">
         <div class="container-fluid" style="background-color: #FFFFFF;">
             <div class="row text-center">
                 <div class="col mb-5 mt-5">
                     <h1>Gallery</h1>
                 </div>
             </div>
+            <div class="break-sectin-lg" style="background-color: #FFFFFF;"></div>
             <div class="container text-center">
                 <div class="row">
                   <div class="col-lg-6 col-sm-4 mb-5">
