--- a/about.html
+++ b/about.html
@@ -1,102 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Giss Tent</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  </head>
+  <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-            <a href="#" class="navbar-brand"><img src="./assets/logo.svg" alt="" srcset=""></a>  		
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-                <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link active">Home</a>
-                    <a href="about-us.html" class="nav-item nav-link">About Us</a>			
-                    <a href="product.html" class="nav-item nav-link">Product</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
-                </div>
-                
-                <div class="navbar-nav action-buttons ml-auto">
-                    <form class="navbar-form form-inline mr-3">
-                        <div class="input-group search-box">								
-                            <input type="text" id="search" class="form-control" placeholder="Search here...">
-                            <div class="input-group-append">
-                                <span class="input-group-text"><i class="material-icons">&#xE8B6;</i></span>
-                            </div>
-                        </div>
-                    </form>
+      <div class="container">
+        <a href="#" class="navbar-brand"><img src="./assets/logo.svg" alt="" srcset="" /></a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
+          <div class="navbar-nav">
+            <a href="#" class="nav-item nav-link">Home</a>
+            <a href="about-us.html" class="nav-item nav-link active">About Us</a>
+            <a href="product.html" class="nav-item nav-link">Product</a>
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+          </div>
 
-                    <a href="login.html" class="nav-item nav-link mr-3">Login</a>		
-                    <a href="register.html" class="btn btn-primary">Register</a>
+          <div class="navbar-nav action-buttons ml-auto">
+            <form class="navbar-form form-inline mr-3">
+              <div class="input-group search-box">
+                <input type="text" id="search" class="form-control" placeholder="Search here..." />
+                <div class="input-group-append">
+                  <span class="input-group-text"><i class="material-icons">&#xE8B6;</i></span>
+                </div>
+              </div>
+            </form>
+
+            <a href="login.html" class="nav-item nav-link mr-3">Login</a>
+            <a href="register.html" class="btn btn-primary">Register</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- about -->
+    <div class="break-section-lg" style="background-color: #F0F7FF;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 ">
+            <img class="img-fluid rounded-float-start" width="100%" src="assets/photo.png" alt="">
+          </div>
+          <div class="col-md-6 align-self-center">
+            <h1>Tentang Giss Tenda</h1>
+            <p class="text-end">Giss Tenda merupakan usaha dibidang penyewaan barang dan jasa untuk berbagai kegiatan seperti pesta pernikahan dan acara lainnya. Usaha tersebut berdiri sejak tahun 2016 berlokasi di Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas, pertama kali didirikan oleh Bapak Caryoko dan dikelola oleh Winda Apriliani selaku co-founder.</p>
+          </div>
+        </div>
+        <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
+    </div>
+    <!-- about -->
+
+    
+    <!--  service -->
+    <div class="break-section-lg bg-light">
+      <div class="container">
+          <div class="row text-center">
+              <div class="col mb-3 mt-6">
+                  <h1>Our Service</h1>
+              </div>
+          </div>
+          <div class="row text-center">
+              <div class="col mb-1">
+                  <img class="img" src="assets/icon-rental.svg" alt="" width="180" height="214" >
+              </div>
+          </div>
+          <div class="row text-center">
+              <div class="col">
+                  <p>Sewa tenda indoor atau outdoor, sewa alat pesta, dan  jasa organ tunggal.</p>
+              </div>
+          </div>
+      </div>
+      <div class="break-section-lg" style="background-color: #FFFFFF;"></div>
+  </div>
+  <!-- service-->
+
+  <!-- our product -->
+  <div class="break-section-lg">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col">
+                <h1>Our Product</h1>
+            </div>
+        </div>
+        <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
+        <div class="row">
+            <div class="col-4 mb-5">
+                <div class="card border border-0" style="background-color: #F0F7FF;">
+                    <img src="assets/noto_circus-tent.svg" width="80" height="80" class="card-img-top" alt="Tenda">
+                    <div class="card-body text-center">
+                        <h3>Tenda</h3>
+                      <p class="card-text">Tenda sesuai ukuran yang anda inginkan, harga tergantung dengan berapa meter penggunaan.</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-4 mb-5">
+                <div class="card border border-0" style="background-color: #F0F7FF;">
+                    <img src="assets/bi_fan.svg" width="80" height="80" class="card-img-top" alt="Kipas">
+                    <div class="card-body text-center">
+                        <h3>Alat Pesta dan Blower</h3>
+                      <p class="card-text">Tersedia berbagai alat keperluan pesta dan blower untuk menyejukan suasan pesta anda.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 mb-5">
+                <div class="card border border-0" style="background-color: #F0F7FF;">
+                    <img src="assets/bxs_piano.svg" width="80" height="80" class="card-img-top" alt="Piano">
+                    <div class="card-body text-center">
+                        <h3>Organ Tunggal</h3>
+                      <p class="card-text">Acara anda butuh hiburan, kami menyediakan jasa organ tunggal lengkap dengan penyanyinya.</p>
+                    </div>
                 </div>
             </div>
         </div>
-    </nav>
-
-  
+    </div>
+</div>
+  <!-- our product -->
 
     <!-- Footer -->
     <footer class="bg-blues footers">
-        <div class="container py-5">
+      <div class="container py-5">
         <div class="row py-4">
-            <div class="col-lg-4 col-md-6 mb-4 mb-lg-0"><img src="./assets/logo-white.svg" alt="" width="180" class="mb-3">
+          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+            <img src="./assets/logo-white.svg" alt="" width="180" class="mb-3" />
             <p class="font-italic text-white">Dapatkan berbagai produk untuk melengkapi acara anda disini dengan harga terjangkau dan kualitas terjamin.</p>
             <ul class="list-inline mt-4">
-                <li class="list-inline-item"><a href="#" target="_blank" title="twitter"><i class="fa i-blue fa-twitter"></i></a></li>
-                <li class="list-inline-item"><a href="#" target="_blank" title="facebook"><i class="fa i-blue fa-facebook"></i></a></li>
-                <li class="list-inline-item"><a href="#" target="_blank" title="instagram"><i class="fa i-blue fa-instagram"></i></a></li>
-                <li class="list-inline-item"><a href="#" target="_blank" title="pinterest"><i class="fa i-blue fa-pinterest"></i></a></li>
-                <li class="list-inline-item"><a href="#" target="_blank" title="vimeo"><i class="fa i-blue fa-vimeo"></i></a></li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="twitter"><i class="fa i-blue fa-twitter"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="facebook"><i class="fa i-blue fa-facebook"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="instagram"><i class="fa i-blue fa-instagram"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="pinterest"><i class="fa i-blue fa-pinterest"></i></a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#" target="_blank" title="vimeo"><i class="fa i-blue fa-vimeo"></i></a>
+              </li>
             </ul>
-            </div>
-            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          </div>
+          <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
             <h6 class="text-uppercase font-weight-bold mb-4">Navigasi</h6>
             <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a href="#" class="text-white">Home</a></li>
-                <li class="mb-2"><a href="#" class="text-white">About Us</a></li>
-                <li class="mb-2"><a href="#" class="text-white">Produk</a></li>
-                <li class="mb-2"><a href="#" class="text-white">Contact</a></li>
+              <li class="mb-2"><a href="#" class="text-white">Home</a></li>
+              <li class="mb-2"><a href="#" class="text-white">About Us</a></li>
+              <li class="mb-2"><a href="#" class="text-white">Produk</a></li>
+              <li class="mb-2"><a href="#" class="text-white">Contact</a></li>
             </ul>
-            </div>
-            <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          </div>
+          <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
             <h6 class="text-uppercase font-weight-bold mb-4">Hubungi Kami</h6>
             <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a href="#" class="text-white">+62 816 693 321</a></li>
-                <li class="mb-2"><a href="#" class="text-white">hi@gisstent.com</a></li>
+              <li class="mb-2">
+                <a href="#" class="text-white">+62 816 693 321</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white">hi@gisstent.com</a>
+              </li>
             </ul>
-            </div>
-            <div class="col-lg-4 col-md-6 mb-lg-0">
+          </div>
+          <div class="col-lg-4 col-md-6 mb-lg-0">
             <h6 class="text-uppercase font-weight-bold mb-4">Alamat</h6>
             <p class="text-white mb-4">Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas</p>
-            </div>
+          </div>
         </div>
-        </div>
+      </div>
 
-        <!-- Copyrights -->
-        <div class="bg-light py-2">
+      <!-- Copyrights -->
+      <div class="bg-light py-2">
         <div class="container text-center">
-            <p class="mb-0 py-2">© 2023 Brusky All rights reserved.</p>
+          <p class="mb-0 py-2">© 2023 Brusky All rights reserved.</p>
         </div>
-        </div>
+      </div>
     </footer>
 
-      <!-- Optional JavaScript -->
+    <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
