Fix: Responsive Home

--- a/about-us.html
+++ b/about-us.html
@@ -23,7 +23,7 @@
         </button>
         <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
           <div class="navbar-nav">
-            <a href="#" class="nav-item nav-link">Home</a>
+            <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about-us.html" class="nav-item nav-link active">About Us</a>
             <a href="product.html" class="nav-item nav-link">Product</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
