--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="col-md-6 col-xs-12 nopadding order-first order-md-last sizing">
-                <img class="bg-banner" src="./assets/bg.png" alt="background image" srcset="">
+                <img class="bg-banner" src="./assets/bg_home.png" alt="background image" srcset="">
             </div>
         </div>
     </section>
@@ -71,7 +71,7 @@
               <div class="col-md-6 align-self-center">
                 <img class="img-fluid rounded-float-start" width="100%" src="assets/photo.png" alt="">
               </div>
-              <div class="col-md-6 align-self-center">
+              <div class="col-md-6 align-self-center mt-4-xs">
                 <h1>Tentang Giss Tenda</h1>
                 <p class="text-end">Giss Tenda merupakan usaha dibidang penyewaan barang dan jasa untuk berbagai kegiatan seperti pesta pernikahan dan acara lainnya. Usaha tersebut berdiri sejak tahun 2016 berlokasi di Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas, pertama kali didirikan oleh Bapak Caryoko dan dikelola oleh Winda Apriliani selaku co-founder.</p>
               </div>
@@ -115,7 +115,7 @@
             </div>
             <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
             <div class="row">
-                <div class="col-4 mb-5">
+                <div class="col-md-4 col-xs-12 mb-5">
                     <div class="card border border-0" style="background-color: #F0F7FF;">
                         <img src="assets/noto_circus-tent.svg" width="80" height="80" class="card-img-top" alt="Tenda">
                         <div class="card-body text-center">
@@ -124,7 +124,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-4 mb-5">
+                <div class="col-md-4 col-xs-12 mb-5">
                     <div class="card border border-0" style="background-color: #F0F7FF;">
                         <img src="assets/bi_fan.svg" width="80" height="80" class="card-img-top" alt="Kipas">
                         <div class="card-body text-center">
@@ -133,7 +133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 mb-5">
+                <div class="col-md-4 col-xs-12 mb-5">
                     <div class="card border border-0" style="background-color: #F0F7FF;">
                         <img src="assets/bxs_piano.svg" width="80" height="80" class="card-img-top" alt="Piano">
                         <div class="card-body text-center">
@@ -157,7 +157,7 @@
             </div>
             <div class="break-section-lg" style="background-color: #FFFFFF;"></div>
             <div class="row">
-                <div class="col-3 mb-5">
+                <div class="col-md-3 col-xs-12 mb-5">
                     <div class="card border border-0">
                         <img src="assets/ph_bag.svg" width="70" height="70" class="card-img-top" alt="Bag">
                         <div class="card-body text-center">
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 mb-5">
+                <div class="col-md-3 col-xs-12 mb-5">
                     <div class="card border border-0">
                         <img src="assets/clock.svg" width="70" height="70" class="card-img-top" alt="Jam">
                         <div class="card-body text-center">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 mb-5">
+                <div class="col-md-3 col-xs-12 mb-5">
                     <div class="card border border-0">
                         <img src="assets/material-symbols_thumb-up-outline-sharp.svg" width="70" height="70" class="card-img-top" alt="Jempol">
                         <div class="card-body text-center">
@@ -191,7 +191,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3 mb-5">
+                <div class="col-md-3 col-xs-12 mb-5">
                     <div class="card border border-0">
                         <img src="assets/et_pricetags.svg" width="69" height="69" class="card-img-top" alt="Harga">
                         <div class="card-body text-center">
@@ -219,19 +219,19 @@
             <div class="break-sectin-lg" style="background-color: #FFFFFF;"></div>
             <div class="container text-center">
                 <div class="row">
-                  <div class="col-lg-6 col-sm-4 mb-5">
-                    <img src="assets/galeri-1.png" width="519" height="390" alt="">
+                  <div class="col-md-6 col-sm-4 mb-5">
+                    <img src="assets/galeri-1.png" width="100%" height="390" alt="">
                   </div>
-                  <div class="col-lg-6 col-sm-4">
-                    <img src="assets/galeri-2.png" width="508" height="390" alt="">
+                  <div class="col-md-6 col-sm-4">
+                    <img src="assets/galeri-2.png" width="100%" height="390" alt="">
                 </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-6 col-sm-4 mb-5">
-                      <img src="assets/galeri-3.png" width="519" height="390" alt="">
+                    <div class="col-md-6 col-sm-4 mb-5">
+                      <img src="assets/galeri-3.png" width="100%" height="390" alt="">
                     </div>
-                    <div class="col-lg-6 col-sm-4 mb-5">
-                      <img src="assets/galeri-4.png" width="508" height="390" alt="">
+                    <div class="col-md-6 col-sm-4 mb-5">
+                      <img src="assets/galeri-4.png" width="100%" height="390" alt="">
                     </div>
                 </div>
             </div>
