--- a/about-us.html
+++ b/about-us.html
@@ -17,7 +17,9 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
-        <a href="#" class="navbar-brand"><img src="./assets/logo.svg" alt="" srcset="" /></a>
+        <a href="#" class="navbar-brand">
+          <img src="./assets/logo.svg" alt="" srcset="" />
+        </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,106 +30,85 @@
             <a href="product.html" class="nav-item nav-link">Product</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
           </div>
-
           <div class="navbar-nav action-buttons ml-auto">
             <form class="navbar-form form-inline mr-3">
               <div class="input-group search-box">
                 <input type="text" id="search" class="form-control" placeholder="Search here..." />
                 <div class="input-group-append">
-                  <span class="input-group-text"><i class="material-icons">&#xE8B6;</i></span>
+                  <span class="input-group-text">
+                    <i class="material-icons">&#xE8B6;</i>
+                  </span>
                 </div>
               </div>
             </form>
-
             <a href="login.html" class="nav-item nav-link mr-3">Login</a>
             <a href="register.html" class="btn btn-primary">Register</a>
           </div>
         </div>
       </div>
     </nav>
-
-    <!-- about -->
-    <div class="break-section-lg" style="background-color: #F0F7FF;">
-      <div class="container">
+    <!-- section tentang -->
+    <div class="" style="background: #F0F7FF;margin-top: 60px;">
+      <div class="container pt-5 pb-5">
         <div class="row">
-          <div class="col-md-6 ">
+          <div class="col-md-6 align-self-center">
             <img class="img-fluid rounded-float-start" width="100%" src="assets/photo.png" alt="">
           </div>
-          <div class="col-md-6 align-self-center">
+          <div class="col-md-6 align-self-center mt-4-xs">
             <h1>Tentang Giss Tenda</h1>
             <p class="text-end">Giss Tenda merupakan usaha dibidang penyewaan barang dan jasa untuk berbagai kegiatan seperti pesta pernikahan dan acara lainnya. Usaha tersebut berdiri sejak tahun 2016 berlokasi di Kalibagor Rt 003 Rw 001 Kecamatan Kalibagor Kabupaten Banyumas, pertama kali didirikan oleh Bapak Caryoko dan dikelola oleh Winda Apriliani selaku co-founder.</p>
           </div>
         </div>
-        <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
+      </div>
     </div>
-    <!-- about -->
-
-    
-    <!--  service -->
-    <div class="break-section-lg bg-light">
-      <div class="container">
-          <div class="row text-center">
-              <div class="col mb-3 mt-6">
-                  <h1>Our Service</h1>
-              </div>
+    <!-- section tentang -->
+    <!-- section service -->
+    <div class="break-section-lg" style="background-color: #FFFFFF;">
+      <div class="container-fluid" style="background-color: #FFFFFF">
+        <div class="row text-center">
+          <div class="col mb-3 mt-5">
+            <h1>Our Service</h1>
           </div>
-          <div class="row text-center">
-              <div class="col mb-1">
-                  <img class="img" src="assets/icon-rental.svg" alt="" width="180" height="214" >
-              </div>
+        </div>
+        <div class="row text-center">
+          <div class="col mb-1">
+            <img class="img-fluid" width="180" height="214" src="assets/icon-rental.svg" alt="">
           </div>
-          <div class="row text-center">
-              <div class="col">
-                  <p>Sewa tenda indoor atau outdoor, sewa alat pesta, dan  jasa organ tunggal.</p>
-              </div>
+        </div>
+        <div class="row text-center">
+          <div class="col">
+            <p>Sewa tenda indoor atau outdoor, sewa alat pesta, dan jasa organ tunggal.</p>
           </div>
+        </div>
       </div>
       <div class="break-section-lg" style="background-color: #FFFFFF;"></div>
-  </div>
-  <!-- service-->
-
-  <!-- our product -->
-  <div class="break-section-lg">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col">
-                <h1>Our Product</h1>
-            </div>
-        </div>
-        <div class="break-section-lg" style="background-color: #F0F7FF;"></div>
-        <div class="row">
-            <div class="col-4 mb-5">
-                <div class="card border border-0" style="background-color: #F0F7FF;">
-                    <img src="assets/noto_circus-tent.svg" width="80" height="80" class="card-img-top" alt="Tenda">
-                    <div class="card-body text-center">
-                        <h3>Tenda</h3>
-                      <p class="card-text">Tenda sesuai ukuran yang anda inginkan, harga tergantung dengan berapa meter penggunaan.</p>
-                    </div>
-                  </div>
-            </div>
-            <div class="col-4 mb-5">
-                <div class="card border border-0" style="background-color: #F0F7FF;">
-                    <img src="assets/bi_fan.svg" width="80" height="80" class="card-img-top" alt="Kipas">
-                    <div class="card-body text-center">
-                        <h3>Alat Pesta dan Blower</h3>
-                      <p class="card-text">Tersedia berbagai alat keperluan pesta dan blower untuk menyejukan suasan pesta anda.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4 mb-5">
-                <div class="card border border-0" style="background-color: #F0F7FF;">
-                    <img src="assets/bxs_piano.svg" width="80" height="80" class="card-img-top" alt="Piano">
-                    <div class="card-body text-center">
-                        <h3>Organ Tunggal</h3>
-                      <p class="card-text">Acara anda butuh hiburan, kami menyediakan jasa organ tunggal lengkap dengan penyanyinya.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-</div>
-  <!-- our product -->
-
+    <!-- section service -->
+    <!-- section produk -->
+    <div class="break-section-lg">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col mb-5">
+            <h1>Our Journey</h1>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-md-4 col-xs-12 mb-5">
+            <h1>6</h1>
+            <p class="card-text">Berdiri tahun 2016</p>
+          </div>
+          <div class="col-md-4 col-xs-12 mb-5">
+            <h1>100+</h1>
+            <p class="card-text">Projek yang dikerjakan</p>
+          </div>
+          <div class="col-md-4 col-xs-12 mb-5">
+            <h1>5</h1>
+            <p class="card-text">Staff yang bekerja</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- section produk -->
     <!-- Footer -->
     <footer class="bg-blues footers">
       <div class="container py-5">
@@ -137,29 +118,47 @@
             <p class="font-italic text-white">Dapatkan berbagai produk untuk melengkapi acara anda disini dengan harga terjangkau dan kualitas terjamin.</p>
             <ul class="list-inline mt-4">
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="twitter"><i class="fa i-blue fa-twitter"></i></a>
+                <a href="#" target="_blank" title="twitter">
+                  <i class="fa i-blue fa-twitter"></i>
+                </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="facebook"><i class="fa i-blue fa-facebook"></i></a>
+                <a href="#" target="_blank" title="facebook">
+                  <i class="fa i-blue fa-facebook"></i>
+                </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="instagram"><i class="fa i-blue fa-instagram"></i></a>
+                <a href="#" target="_blank" title="instagram">
+                  <i class="fa i-blue fa-instagram"></i>
+                </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="pinterest"><i class="fa i-blue fa-pinterest"></i></a>
+                <a href="#" target="_blank" title="pinterest">
+                  <i class="fa i-blue fa-pinterest"></i>
+                </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" target="_blank" title="vimeo"><i class="fa i-blue fa-vimeo"></i></a>
+                <a href="#" target="_blank" title="vimeo">
+                  <i class="fa i-blue fa-vimeo"></i>
+                </a>
               </li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
             <h6 class="text-uppercase font-weight-bold mb-4">Navigasi</h6>
             <ul class="list-unstyled mb-0">
-              <li class="mb-2"><a href="#" class="text-white">Home</a></li>
-              <li class="mb-2"><a href="#" class="text-white">About Us</a></li>
-              <li class="mb-2"><a href="#" class="text-white">Produk</a></li>
-              <li class="mb-2"><a href="#" class="text-white">Contact</a></li>
+              <li class="mb-2">
+                <a href="#" class="text-white">Home</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white">About Us</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white">Produk</a>
+              </li>
+              <li class="mb-2">
+                <a href="#" class="text-white">Contact</a>
+              </li>
             </ul>
           </div>
           <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
@@ -179,7 +178,6 @@
           </div>
         </div>
       </div>
-
       <!-- Copyrights -->
       <div class="bg-light py-2">
         <div class="container text-center">
@@ -187,7 +185,6 @@
         </div>
       </div>
     </footer>
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
