Feat: Add Page Contact

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
             </button>
             <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
                 <div class="navbar-nav">
-                    <a href="#" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about-us.html" class="nav-item nav-link">About Us</a>			
                     <a href="product.html" class="nav-item nav-link">Product</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -45,6 +45,49 @@
             </div>
         </div>
     </nav>
+
+    <!-- section banner -->
+    <section class="banner">
+        <div class="row mx-auto container nopadding">
+            <div class="col-md-6 col-xs-12 bg-blue">
+                <div class="text-title">
+                    <h1>KONTAK KAMI</h1>
+                    <p>Ingin merencanakan acara dengan 
+                        menggunakan Giss 
+                        Tenda? Hubungi kami sekarang</p>
+                    <button class="btn-lihat bg-white">LIHAT DETAIL</button>
+                </div>
+            </div>
+            <div class="col-md-6 col-xs-12 nopadding order-first order-md-last sizing">
+                <img class="bg-banner" src="./assets/contact_bg.png" alt="background image" srcset="">
+            </div>
+        </div>
+    </section>
+    <!-- section banner -->
+
+    <div class="break-section"></div>
+
+    <div class="container">
+        <h1 class="text-center">Hubungi Kami</h1>
+        <form>
+            <div class="form-group">
+              <label for="input_name">Nama Lengkap</label>
+              <input type="text" class="form-control" id="input_name" aria-describedby="input_name" placeholder="Masukan Nama Lengkap">
+            </div>
+            <div class="form-group">
+              <label for="input_email">Email</label>
+              <input type="email" class="form-control" id="input_email" placeholder="Masukan Email">
+            </div>
+            <div class="form-group">
+              <label for="input_pesan">Pesan</label>
+              <textarea type="text" class="form-control" id="input_pesan" placeholder="Masukan Pesan"></textarea>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+    </div>
+    <div class="break-section"></div>
+
     <!-- Footer -->
     <footer class="bg-blues footers">
         <div class="container py-5">
