Fix: Typo Nav Contact

--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,10 @@
             </button>
             <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
                 <div class="navbar-nav">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="about-us.html" class="nav-item nav-link">About Us</a>			
                     <a href="product.html" class="nav-item nav-link">Product</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contact</a>
                 </div>
                 
                 <div class="navbar-nav action-buttons ml-auto">
